# windowing

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: compile_commands.json  debug.hpp  glad.c  main.cpp  shader.frag  shader.hpp  texture.hpp
src/shaders/: shader.frag  shader.vert
